feat: improve background and file structure.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SoloTrain Privacy Policy</title>
+    <link rel="icon" type="image/webp" href="assets/logo.webp" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <header>
-        <img src="SoloTrain.webp" alt="SoloTrain Logo" class="logo" />
+        <img src="assets/logo.webp" alt="SoloTrain Logo" class="logo" />
         <h1>SoloTrain Privacy Policy</h1>
         <p class="effective-date">Effective Date: January 5, 2026</p>
       </header>
